<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog_fragment_login_github"
    tools:context="com.yangxiaobin.gank.mvp.view.fragment.AboutFragment"
    >

  <android.support.design.widget.AppBarLayout
      android:id="@+id/appbarlayout_about_fragment"
      android:layout_width="match_parent"
      android:layout_height="256dp"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      >

    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolar_layout_about_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
        app:titleEnabled="false"
        >

      <ImageView
          android:id="@+id/imgv_header_about_fragment"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:scaleType="centerCrop"
          android:src="@drawable/header_dialog_fragment"
          app:layout_collapseMode="parallax"
          app:layout_collapseParallaxMultiplier="0.7"
          />

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:orientation="vertical"
          >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/change_round_200"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="0.7"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_version_code"
            android:textColor="@color/Black"
            android:textStyle="bold"
            />
      </LinearLayout>
      <android.support.v7.widget.Toolbar
          android:id="@+id/toolbar_about_frament"
          android:layout_width="match_parent"
          android:layout_height="80dp"
          android:paddingTop="20dp"
          app:layout_collapseMode="pin"
          app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
          app:navigationIcon="@drawable/ic_left_arraw_128"
          app:title="关于"
          />

    </android.support.design.widget.CollapsingToolbarLayout>
  </android.support.design.widget.AppBarLayout>

  <android.support.v4.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scrollbars="none"
      app:behavior_overlapTop="40dp"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
      <!--about application-->
      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginBottom="5dp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:layout_marginTop="8dp"
          app:cardCornerRadius="4dp"
          app:cardElevation="6dp"
          app:contentPaddingTop="16dp"
          >
        <TextView
            android:id="@+id/tv_card_about_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="16sp"
            />
      </android.support.v7.widget.CardView>
      <!--about author-->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:text="@string/about_author"
          android:textColor="@color/Black"
          android:textSize="20sp"
          android:textStyle="bold"
          />
      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginBottom="5dp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:layout_marginTop="8dp"
          app:cardCornerRadius="4dp"
          app:cardElevation="10dp"
          app:contentPaddingBottom="16dp"
          >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
          <!-- author image-->
          <ImageView
              android:id="@+id/imgv_author_head_about_fragment"
              android:layout_width="60dp"
              android:layout_height="60dp"
              android:layout_centerVertical="true"
              android:layout_margin="10dp"
              android:scaleType="centerCrop"
              android:src="@mipmap/ic_launcher"
              />
          <!--author-->
          <TextView
              android:id="@+id/tv_author_name_about_fragment"
              android:layout_width="60dp"
              android:layout_height="wrap_content"
              android:layout_below="@+id/imgv_author_head_about_fragment"
              android:layout_margin="10dp"
              android:gravity="center"
              android:text="@string/name_author"
              />
          <!-- gihtub-->
          <TextView
              android:id="@+id/tv_github_page_about_framgent"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerVertical="true"
              android:layout_margin="10dp"
              android:layout_toEndOf="@+id/imgv_author_head_about_fragment"
              android:text="@string/github_home_page"
              />

        </RelativeLayout>
      </android.support.v7.widget.CardView>
    </LinearLayout>
  </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
